[tool.poetry]
name = "sakuzu"
version = "0.0.19"
authors = ["Akhil Sadam"]
description = "A utility to simplify UML-likes diagrams for Python via Matplotlib."

packages = [
    { include = "sakuzu", from = "src" },
]
# provide packages from `src` directory

[tool.poetry.dependencies]
python = ">=3.8.10"
numpy = ">=1.21.2"
matplotlib = ">=3.7.0"
dataclasses = ">=0.6"
# `poetry add pendulum` to add a dependency to current project

[tool.poetry.dev-dependencies]
pytest = ">=3.0"

# [tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
